# nevermind

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.sqlx/: query-0165b34e6fe30f89078714d2a8d25eafb9ab548b126d24359f1188e64d805347.json  query-095964d6f3682b01f6cc42a43d366a54a3353e6300e62f17115630854289dcc7.json  query-0da5c940622f7b377358bf11af62443cbd9214fa7098fb8d7aa82e032decc99f.json  query-0e03986065b412bd6e2172ebb832360ad2f926bbc0a3b73b7328ac45938d8176.json  query-0e3866a4e61e34329feb960c3d25dc9ac9cb9ef637a042978e568132dea04360.json  query-0f1484396a47e0de973d38c4f3d5dac40e26b99cc1c9062674ec5a06869d770c.json  query-1fe8097132cf0e605474aef56242bbd43554e7241de24b1091b80fc27d966df5.json  query-214b4a4e41d94899891cfaaf8f0ea051b71b971bfc3c6dcd11205b2081dd2ce0.json  query-22231acfa14c98722a7ec95a2696f77ba08a2ee55ff680d8c21036db121de6f6.json  query-22a393c881da589d2f2fc9a2de1c0ee3ee5b1c1ef29882c3e5271703b1e7ac15.json  query-26d67caaeafa603b41316cd4626cc794bf1ea82ed4a4848bcf6f2f5763d4b86e.json  query-29c06ea473bedaa504d2a2b9f22d62b5b670b66603df27c1a4b129a7c3a0f218.json  query-2d0b5bdcb3e68ecebd81665516c70e559271cd42563f18a26e7007280ef994aa.json  query-2e80bdc7fa0e2f1f58576896df0e3c7de3d5ccf016951d7f6d177917a699e777.json  query-305521aa8805fc35b39dfc46f9ec88803a130ae65223c13847db6e2758e42349.json  query-32a2ab668cf7bea44cb41b557fb0246f972c47ad33254ceb5cae3107b53c9a6c.json  query-3ef379101de3ea4b59a7ae469980e50640021bb92d434539bccb42932320a296.json  query-3f85f9841c0a8e110a20ab65d5f7b27d9cacf36ac1a2d026ae8797811c3a64a6.json  query-44dd59f30a4f40b484ab2c5cd9f086f910ba943fdd94dbb12c6b1f13493cb9ac.json  query-466150107c6607195b344e6c75d7c9a632aed73162270b36541f6643b41245ee.json  query-4aae6b1770aa382053f3d2bf57429e762179b2d5c1dcd88fd35eb35b768a921d.json  query-4b7852fdddbae392a070a1320bf6e14e6ef6d2a2c7d167976fdc7881573c8577.json  query-4d8e08abc10da52498aaf1103fdcf5c25b584eba6369ec9d6fce8cf96ed45884.json  query-4f2aea38f419e0f8e796a75f3fda9bd12be376948fc24e7aa1694da131585c1d.json  query-515e93c568cf5e0d6b4a2b3df2b77898720a6f41d3d42e238023509251eba968.json  query-521b65f3b46553cc87edb319bba2150896c4c0ef198af80a61c3fb87f4070b6c.json  query-535be150b624d3430b39f4ff282efae83f87a47ac56f3c5186003b94ac2ce606.json  query-5831da643b375f953d91427d855a5fee41584a7f3d6c38c038bf6e6f821b09b0.json  query-58a96594c98e45d4f99d345d26952e654ff481a7f3de9d2077c8957a97a8af42.json  query-58b1ea50af98b7e5a8f9f869bf753752a015e2f40a05acb716e2af832c9828c6.json  query-5b3d6b0cf6a2cf0b2633cbda4b0fc510a02e14885cd7b1cdc856d6227a15c824.json  query-611011efb961d63eeae5c56c3df2b78062caf83fc1c7cd2fde13ca80faacbdda.json  query-6121422812c82b2ca33d7126e987fcc4827d3f7e377e7a5144b598e4ad32bbd3.json  query-61ac23fcdedb58b173a39a35ef817c4c5fc96f1c353f253d95c1148db3087668.json  query-66c8a46f1ed4a6ebe50d3631dd3322f5ef39bb82ed075b8d61947469090a313f.json  query-69fb97bf268c44588ca9277367702bab154b1165a9d456ad80800751a23b0e0c.json  query-6aedade19e8a85a9c6dc2a0be73f96fe35f2d1ef3cad1f0ab197e81057b6de5b.json  query-6eaf976733c36b23ad5ee371f566f416d739348ff51ad5eaec17449d6358ff6e.json  query-6f39dce88314d4968b99e5f1414fb37ec4e55e74c296ee9f372d37e910dd29a0.json  query-71710f54b89c128fde24b8702c94adc47788dc5cf61c90ef070261d2b4e1a8a2.json  (+32 more)
config/: base.toml
migrations/: 20241011065625_user_table.sql  20241011065854_email_table.sql  20241031043836_add_confirmation_row_to_email_table.sql  20241107015016_social_provider_table.sql  20241107061732_add_password_set_to_user_table.sql  20241111023612_add_username_reset_to_user.sql  20241121091937_add_app_permission.sql  20241121091937_add_app_roles.sql  20250107064149_index_user_created_at_table.sql  20250108134816_business_table.sql  20250108233300_translation_constraint.sql  (+7 more)
postgis/: Dockerfile
(+87 files in other folders)
