[package]
name = "nevermind"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros", "json"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
redis = { version = "0.27.4", features = ["tokio-comp", "json"] }
reqwest = { version = "0.12.8", features = ["json"] }
secrecy = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
thiserror = "1.0.64"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
utoipa = { version = "5.0.0-rc", features = ["axum_extras"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
fake = "2.10.0"
