[package]
name = "nevermind"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
aws-config = "1.5.8"
aws-sdk-s3 = "1.57.0"
aws-sdk-sesv2 = "1.50.0"
axum = { version = "0.7.7", features = ["macros", "json"] }
base32 = "0.5.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
mime2 = "0.1.6"
rand = "0.8.5"
redis = { version = "0.27.4", features = ["tokio-comp", "json"] }
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
secrecy = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
thiserror = "1.0.64"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
url = "2.5.3"
utoipa = { version = "5.1.1", features = ["axum_extras", "time", "uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
fake = "2.10.0"
wiremock = "0.6.2"
